--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "lib": [
+      "DOM",
       "ES2022"
     ],
     "module": "node16",
