--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@libreworks/container",
-  "description": "A simple dependency injection container and event publisher",
+  "description": "A simple dependency injection container and event target",
   "repository": {
     "type": "git",
     "url": "https://github.com/libreworks/container.git"
@@ -28,12 +28,12 @@
   },
   "author": {
     "name": "LibreWorks Contributors",
-    "url": "https://github.com/libreworks/shady-island/contributors",
+    "url": "https://github.com/libreworks/container/contributors",
     "organization": true
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "@types/node": "^16",
+    "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
     "eslint": "^8",
@@ -54,8 +54,18 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "pino": "^8.15.0",
     "ts-log": "^2.2.5"
+  },
+  "keywords": [
+    "EventTarget",
+    "dependency injection",
+    "di",
+    "inversion-of-control",
+    "ioc",
+    "service locator"
+  ],
+  "engines": {
+    "node": ">= 18.0.0"
   },
   "main": "lib/index.js",
   "license": "MIT",
