fix: use private fields instead of Symbols

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "strictPropertyInitialization": true,
     "stripInternal": true,
     "target": "es2022",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "removeComments": true
   },
   "include": [
     "src/**/*.ts"
