--- a/package.json
+++ b/package.json
@@ -83,21 +83,6 @@
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.js$": "$1"
     },
-    "transform": {
-      "^.+\\.[t]sx?$": [
-        "ts-jest",
-        {
-          "tsconfig": "tsconfig.dev.json"
-        }
-      ],
-      "^.+\\.ts$": [
-        "ts-jest",
-        {
-          "useESM": true,
-          "tsconfig": "tsconfig.dev.json"
-        }
-      ]
-    },
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
       "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
@@ -129,7 +114,17 @@
           "outputDirectory": "test-reports"
         }
       ]
-    ]
+    ],
+    "transform": {
+      "^.+\\.ts$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json",
+          "useEsm": true,
+          "useESM": true
+        }
+      ]
+    }
   },
   "types": "lib/index.d.ts",
   "type": "module",
