--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^3.3.3",
     "projen": "^0.86.6",
     "ts-jest": "^29.2.5",
+    "tsx": "^4.19.2",
     "typedoc": "^0.26.6",
     "typescript": "^5.5.4"
   },
