--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.18.2
+          node-version: "22"
       - name: Install dependencies
         run: yarn install --check-files --frozen-lockfile
       - name: release
@@ -71,7 +71,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.18.2
+          node-version: "22"
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -97,7 +97,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.18.2
+          node-version: "22"
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
